--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ h2 {
     line-height: 50px;
 }
 
-a.tbl-biru {
+a.tbl-contact {
     background: #3f72af;
     border-radius: 20px;
     margin-top: 20px;
@@ -122,13 +122,13 @@ a.tbl-biru {
     font-weight: bold;
 }
 
-a.tbl-biru:hover {
-    background: #fc5185;
+a.tbl-contact:hover {
+    background: #021075;
     text-decoration: none;
 }
 
-a.tbl-pink {
-    background: #fc5185;
+a.tbl-hire {
+    background: #021075;
     border-radius: 20px;
     margin-top: 20px;
     padding: 15px 20px 15px 20px;
@@ -137,7 +137,7 @@ a.tbl-pink {
     font-weight: bold;
 }
 
-a.tbl-pink:hover {
+a.tbl-hire:hover {
     background: #3f72af;
     text-decoration: none;
 }
@@ -192,7 +192,7 @@ p {
   }
   
   .footer-distributed{
-    background: #666;
+    background: rgb(27, 105, 201);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     width: 100%;
@@ -228,7 +228,7 @@ p {
   .footer-distributed h3 span{
     font-family: 'Poppins', sans-serif;
     font-size: 45px;
-    color: #1581b2;
+    color: #f6f6f6;
   }
   
   /* Footer links */
