mini project programmer males;

--- a/style.css
+++ b/style.css
@@ -221,9 +221,9 @@ p {
 }
 
 .portfolio p {
-    font-family: 'comic sans ms';
+    font-family: 'quicksand';
     font-weight: 800;
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
     color: #364f6b;
 }
