--- a/style.css
+++ b/style.css
@@ -111,6 +111,9 @@ h2 {
     width: 100%;
     line-height: 50px;
 }
+.sub{
+  font-family: 'poppins';
+}
 
 a.tbl-contact {
     background: #3f72af;
@@ -171,7 +174,7 @@ p {
 }
 
 .skill p {
-    font-family: 'comic sans ms';
+    font-family: 'quicksand';
     font-weight: 800;
     font-size: 25px;
     text-align: center;
@@ -260,7 +263,7 @@ p {
     font-weight: 800;
     float: left;
     font-family: 'Quicksand', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #364f6b;
+    color: #000102;
   }
   
   .footer-distributed h3 span{
