--- a/scroll.css
+++ b/scroll.css
@@ -3,12 +3,12 @@
     text-align: center;
     width: 100%;
     margin-top: 1px;
+    
 }
 .skill-list {
     width: 100%;
-    overflow-x: scroll; /* only horizontal scrollbar */
     display: flex;
-    flex-wrap: wrap; /* wrap the elements to a new line if not enough space */
+    margin-right: 40px ;
 }
 
 .skill {
